--- a/list.html
+++ b/list.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-        <title>Hello user!</title>
+        <title>List Page!</title>
         <meta content name="description" />
         <meta content name="keywords" />
 
@@ -398,8 +398,8 @@
             </div>
             <!-- End Sidebar-->
             <!-- hero section starts here -->
-            <div class="container my-5">
-                <div class="p-5 text-center bg-body-tertiary rounded-3 justify-content-center">
+            <div class="container mt-5 mb-2">
+                <div class="p-2 text-center bg-body-tertiary rounded-3 justify-content-center">
                   <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb">
                       <li class="breadcrumb-item"><a href="index.html">Home</a></li>
