--- a/test.html
+++ b/test.html
@@ -1,39 +1,137 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
     <head>
-        <title>Marquee Tag</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Blog Post Page</title>
+        <link
+            href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css"
+            rel="stylesheet">
         <style>
-        .main {
-            text-align: center;
-        }
-
-        .marq {
-            padding-top: 30px;
-            padding-bottom: 30px;
-        }
-
-        .geek1 {
-            font-size: 36px;
-            font-weight: bold;
+        .blog-header {
+            background: linear-gradient(to right, #007bff, #00aaff);
             color: white;
-            padding-bottom: 10px;
+            padding: 2rem 0;
+        }
+        .blog-title {
+            margin-bottom: 1rem;
+            font-size: 2.5rem;
+        }
+        .blog-meta {
+            font-size: 0.875rem;
+            color: #6c757d;
+        }
+        .author-info {
+            display: flex;
+            align-items: center;
+            margin-top: 2rem;
+        }
+        .author-info img {
+            border-radius: 50%;
+            width: 80px;
+            height: 80px;
+            object-fit: cover;
+        }
+        .sidebar {
+            border: 1px solid #ddd;
+            padding: 1rem;
+            border-radius: .375rem;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .sidebar h4 {
+            margin-bottom: 1rem;
+        }
+        .sidebar ul {
+            padding-left: 0;
+            list-style: none;
+        }
+        .sidebar ul li a {
+            text-decoration: none;
+            color: #007bff;
+        }
+        .sidebar ul li a:hover {
+            text-decoration: underline;
+        }
+        .footer {
+            background-color: #f8f9fa;
+            padding: 1rem 0;
         }
     </style>
     </head>
-
     <body>
-        <div class="main">
-            <marquee class="marq" bgcolor="Green"
-                direction="left" loop>
-                <div class="geek1">
-                    GeeksforGeeks
-                </div>
-                <div class="geek2">
-                    A computer science portal for geeks
-                </div>
-            </marquee>
-        </div>
-    </body>
 
+        <header class="blog-header text-center">
+            <div class="container">
+                <h1 class="blog-title">My Blog</h1>
+            </div>
+        </header>
+
+        <div class="container my-5">
+            <div class="row">
+                <main class="col-lg-8 mb-4">
+                    <article>
+                        <h2 class="fw-bold mb-3">The Title of the Blog Post</h2>
+                        <p class="blog-meta">Posted on September 6, 2024 by <a
+                                href="#"
+                                class="text-decoration-none text-primary">Author
+                                Name</a></p>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Vivamus lacinia odio vitae vestibulum. Cras ac
+                            gravida nisi. Phasellus gravida, libero eget
+                            consequat tincidunt, magna sapien auctor nisi, ac
+                            vestibulum nulla risus at metus. Duis varius mauris
+                            eget mauris tincidunt, sed varius mi luctus.
+                            Curabitur vel viverra dui. Sed nec dictum ligula.
+                            Praesent a sem eu sapien interdum volutpat et sed
+                            erat.</p>
+
+                        <p>Nulla facilisi. Proin tempor est at mi vehicula, et
+                            auctor elit vulputate. Donec ut scelerisque felis.
+                            Vivamus id blandit orci. Integer nec velit nec
+                            ligula fermentum condimentum. In congue orci ac
+                            efficitur posuere. Nulla facilisi.</p>
+
+                        <div class="author-info">
+                            <img src="https://via.placeholder.com/80"
+                                alt="Author">
+                            <div class="ms-3">
+                                <h5 class="mb-1">Author Name</h5>
+                                <p class="mb-0">Author bio or description goes
+                                    here. It could be a few sentences about the
+                                    author or a link to their profile.</p>
+                            </div>
+                        </div>
+                    </article>
+                </main>
+
+                <aside class="col-lg-4">
+                    <div class="sidebar mb-4">
+                        <h4>About the Author</h4>
+                        <p>Brief information about the author. It could include
+                            their background, expertise, and other relevant
+                            details.</p>
+                    </div>
+
+                    <div class="sidebar">
+                        <h4>Recent Posts</h4>
+                        <ul>
+                            <li><a href="#">Post Title 1</a></li>
+                            <li><a href="#">Post Title 2</a></li>
+                            <li><a href="#">Post Title 3</a></li>
+                        </ul>
+                    </div>
+                </aside>
+            </div>
+        </div>
+
+        <footer class="footer text-center">
+            <div class="container">
+                <p class="mb-0">&copy; 2024 My Blog. All rights reserved.</p>
+            </div>
+        </footer>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
 </html>
