--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <!-- End Header -->
         <!-- hero section starts here -->
         <section class="bsb-hero-1 px-3 bsb-overlay bsb-hover-pull">
-            <div class="row justify-content-md-center">
+            <div class="row justify-content-md-center mt-1">
                 <div class="col-12 col-md-11 col-lg-9 col-xl-7 col-xxl-6 text-center text-white">
                     <h3 class="fw-bold mb-3 text-dark">
                         <span class="text-success" style="width: fit-content;display: inline;">Welcome To Indian</span>
